welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:9: error: ')' expected but 'if' found.
	if(baggle < 3){
        ^